# eWolf_ROS2

./: .gitignore  D_20210914_Modell_Inbetriebnahme_BreakOutBox_Jetson.slx  D_20231120_Modell_Inbetriebnahme_BreakOutBox_Jetson.slx  Nvidia_Jetson.slx  README.md  Screencast from 07-23-2025 11:58:49 AM.webm  Send_Lidar.cpp  UDPsendmessage.py  VehicleDynamic.msg  ZF_Datenlist.txt  cam_lidarfusion.py  camera_lidar_node.py  check_links.txt  createBusVehiclePose.m  createLaneSensorBuses.m  demodata.txt  docker_build  download_until_full.sh  ekf.yaml  ewolfSetUp.m  get_links.py  gpstoodometry.cpp  gpstoodometry.py  lane_boundary_transformer.cpp  license  lidarcluster.cpp  links.txt  mapvisualization.py  mpccontroller.py  ori_check_links.txt  packLaneMarkerBus.m  readme_ros_humble_docker  stanleycontroller.py  test.code  test.cpp  test_delay.py  tracking_sim.py  udpsend_gps.cpp  vehicle_dynamic_node.cpp  vehicle_odometry_node.cpp
bboxes_msg/: CMakeLists.txt  package.xml
camera_odometry/: package.xml  setup.cfg  setup.py
detector_3d_package/: package.xml  setup.cfg  setup.py
doc/: readme.md  requirements.txt
gps_odometry_package/: CMakeLists.txt  package.xml
gps_ros2/: package.xml  setup.cfg  setup.py
lane_detection_package/: Campus.xml  CampusLanenet.osm  package.xml  setup.cfg  setup.py
lane_detection_visualization/: CMakeLists.txt
lane_parameter_msg/: CMakeLists.txt  package.xml
lanedet_ros2/: package.xml  setup.cfg  setup.py
live_detection/: setup.cfg
local_costmap_pkg/: package.xml  setup.cfg  setup.py
publish_path/: setup.py  (+2 more)
vehicle_odometry_package/: CMakeLists.txt  package.xml
vehicle_odometry_package/src/: vehicle_odometry_node.cpp
(+127 files in other folders)
